# horoscope

./: .gitignore  README.md  pyproject.toml
my_page/goroscop/: apps.py  converters.py  urls.py  views.py
my_page/goroscop/static/goroscop/css/: index.css  info.css
my_page/goroscop/templates/goroscop/: index.html  info_zodiac.html
my_page/goroscop/templates/includes/: navbar.html
my_page/goroscop/templatetags/: my_filters.py
my_page/my_page/: settings.py  urls.py
my_page/static/css/: base.css
my_page/templates/: base.html
my_page/week_days/: urls.py  views.py
tests/: test_start_project.py
