[tool.poetry]
name = "start-project"
version = "0.1.0"
description = ""
authors = ["kukhmax <kukhmax@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
